feat: Добавить запрос PATCH /effects/{effect}
